# ted

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.template.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
algorithms/: bbands.rhai  example.rhai  rsi.rhai
src/: logger.rs  main.rs  tui.rs
src/algorithm/: grid.rs  mod.rs  passive.rs  script.rs  traits.rs
src/api/: auth.rs  endpoints.rs  mod.rs  types.rs  websocket.rs
src/commands/: cli.rs
src/config/: channels.rs  config.rs  mod.rs
src/runner/: mod.rs  report.rs  trade_log.rs
src/storage/: mod.rs
