[package]
name = "ted"
version = "1.0.4"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3"
clap = { version = "4.6.0", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
crossterm = { version = "0.28", features = ["event-stream"] }
rhai = { version = "1.20", features = ["sync"] }